04 edit: 그림검사 템플릿 수정/모바일 반응형

--- a/drawingTest_list.html
+++ b/drawingTest_list.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/mobile.css">
 </head>
 
-<body class="index">
+<body>
 
     <header>
         <!-- 네비게이션 -->
@@ -22,9 +22,10 @@
                 <i class="fas fa-chevron-left"></i>
             </a>
             <div class="logo">
-                <a href="">
+                <a href="" class="is-hidden-mobile">
                     <img src="./img/logo.png" alt="마음사이">
                 </a>
+                <div class="mobile-current-title is-hidden-tablet">그림검사</div>
             </div>
             <nav class="menu is-hidden-mobile">
                 <ul class="main-menu">
@@ -412,41 +413,6 @@
                 <a href="">
                     <img src="./img/bottom_banner.png" alt="">
                 </a>
-            </div>
-        </section>
-
-        <!-- 위캐닝 심리검사 for mobile -->
-        <section class="wecaning-test is-hidden-desktop">
-            <div class="container">
-                <ul class="item-list">
-                    <li>
-                        <a href="">
-                            <div class="image">
-                                <img src="./img/icon_wecaning_1.png">
-                            </div>
-                            <span class="name">자기주도학습검사 <b>W-SAT</b></span>
-                            <span class="link">검사</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="image">
-                                <img src="./img/icon_wecaning_2.png">
-                            </div>
-                            <span class="name">기질·부모검사 <b>W-API</b></span>
-                            <span class="link">검사</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="image">
-                                <img src="./img/icon_wecaning_3.png">
-                            </div>
-                            <span class="name">적성·부모검사 <b>W-TPI</b></span>
-                            <span class="link">검사</span>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </section>
 
