--- a/drawingTest_detail.html
+++ b/drawingTest_detail.html
@@ -22,9 +22,10 @@
                 <i class="fas fa-chevron-left"></i>
             </a>
             <div class="logo">
-                <a href="">
+                <a href="" class="is-hidden-mobile">
                     <img src="./img/logo.png" alt="마음사이">
                 </a>
+                <div class="mobile-current-title is-hidden-tablet">그림검사</div>
             </div>
             <nav class="menu is-hidden-mobile">
                 <ul class="main-menu">
