--- a/drawingTest_detail.html
+++ b/drawingTest_detail.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/mobile.css">
 </head>
 
-<body class="index">
+<body>
 
     <header>
         <!-- 네비게이션 -->
