--- a/index.html
+++ b/index.html
@@ -773,6 +773,7 @@
 
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/swiper.min.js"></script>
+    <script src="./js/scripts.js"></script>
     <script>
         // 메인 슬라이더 생성
         var mainSlider = $(".main .slider-banner").length;
@@ -802,51 +803,6 @@
                 },
             });
         }
-
-        // 모바일 메뉴 관련 함수
-        var posY;
-        var mobileMenuActive = false;
-
-        function openMobileMenu() {
-            posY = $(window).scrollTop();
-            $("html, body").addClass("no-scroll");
-            $(".mobile-menu").addClass("is-active");
-            mobileMenuActive = true;
-        }
-
-        function closeMobileMenu() {
-            $("html, body").removeClass("no-scroll");
-            $(window).scrollTop(posY);
-            $(".mobile-menu").removeClass("is-active");
-            mobileMenuActive = false;
-        }
-
-        $(function () {
-            // hamberger: 모바일 메뉴 액션
-            $(".hamberger").click(function () {
-                openMobileMenu();
-                return false;
-            })
-            $(".close-mobile-menu").click(function () {
-                closeMobileMenu();
-                return false;
-            })
-
-            // footer: 관련 사이트 액션
-            $(".related-site").click(function () {
-                $(this).toggleClass("is-active");
-            })
-        })
-
-        // header: 모바일 fixed
-        $(window).scroll(function () {
-            var topScroll = $(document).scrollTop();
-            if (topScroll >= 150) {
-                $("header").addClass("is-fixed");
-            } else {
-                $("header").removeClass("is-fixed");
-            }
-        })
     </script>
 </body>
 
