--- a/pages.html
+++ b/pages.html
@@ -46,6 +46,19 @@
                 </ul>
             </div>
         </div>
+        <div class="box">
+            <div class="content">
+                <h3>마음설명서</h3>
+                <ul>
+                    <li>
+                        <a href="./manual_list.html">리스트</a>
+                    </li>
+                    <li>
+                        <a href="./manual_detail.html">상세</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </body>
