--- a/pages.html
+++ b/pages.html
@@ -59,6 +59,19 @@
                 </ul>
             </div>
         </div>
+        <!-- <div class="box">
+            <div class="content">
+                <h3>고민상담</h3>
+                <ul>
+                    <li>
+                        <a href="./consulting_list.html">리스트</a>
+                    </li>
+                    <li>
+                        <a href="./consulting_detail.html">상세</a>
+                    </li>
+                </ul>
+            </div>
+        </div> -->
     </div>
 
 </body>
