--- a/drawingTest_list.html
+++ b/drawingTest_list.html
@@ -402,7 +402,7 @@
                 </ul>
 
                 <div class="buttons is-centered">
-                    <a href="" class="button is-medium">더 보기</a>
+                    <a href="" class="button">더 보기</a>
                 </div>
             </div>
         </section>
