--- a/pages.html
+++ b/pages.html
@@ -59,7 +59,7 @@
                 </ul>
             </div>
         </div>
-        <!-- <div class="box">
+        <div class="box">
             <div class="content">
                 <h3>고민상담</h3>
                 <ul>
@@ -69,9 +69,12 @@
                     <li>
                         <a href="./consulting_detail.html">상세</a>
                     </li>
+                    <li>
+                        <a href="./consulting_write.html">작성</a>
+                    </li>
                 </ul>
             </div>
-        </div> -->
+        </div>
     </div>
 
 </body>
