--- a/drawingTest_detail.html
+++ b/drawingTest_detail.html
@@ -328,7 +328,7 @@
                             <dt><b>내마음</b>님 작성</dt>
                             <dd>2020.05.12</dd>
                         </dl>
-                        <a class="button is-light likes">
+                        <a class="button likes">
                             <i class="fas fa-heart"></i>
                             <span class="like-count">4</span>
                         </a>
