--- a/pages.html
+++ b/pages.html
@@ -75,6 +75,19 @@
                 </ul>
             </div>
         </div>
+        <div class="box">
+            <div class="content">
+                <h3>토닥토닥</h3>
+                <ul>
+                    <li>
+                        <a href="./todak_list.html">리스트</a>
+                    </li>
+                    <li>
+                        <a href="./todak_detail.html">상세</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </body>
