--- a/pages.html
+++ b/pages.html
@@ -85,6 +85,9 @@
                     <li>
                         <a href="./todak_detail.html">상세</a>
                     </li>
+                    <li>
+                        <a href="./todak_write.html">작성</a>
+                    </li>
                 </ul>
             </div>
         </div>
