--- a/pages.html
+++ b/pages.html
@@ -91,6 +91,22 @@
                 </ul>
             </div>
         </div>
+        <div class="box">
+            <div class="content">
+                <h3>마음쌀롱</h3>
+                <ul>
+                    <li>
+                        <a href="./salon_list.html">리스트</a>
+                    </li>
+                    <li>
+                        <a href="./salon_detail.html">상세</a>
+                    </li>
+                    <li>
+                        <a href="./salon_write.html">작성</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </body>
