--- a/pages.html
+++ b/pages.html
@@ -120,6 +120,19 @@
                 </ul>
             </div>
         </div>
+        <div class="box">
+            <div class="content">
+                <h3>마음공감</h3>
+                <ul>
+                    <li>
+                        <a href="./phrase_list.html">리스트</a>
+                    </li>
+                    <li>
+                        <a href="./phrase_detail.html">상세</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </body>
