12 add: 감사일기 목록/상세 추가

--- a/pages.html
+++ b/pages.html
@@ -133,6 +133,19 @@
                 </ul>
             </div>
         </div>
+        <div class="box">
+            <div class="content">
+                <h3>감사일기</h3>
+                <ul>
+                    <li>
+                        <a href="./diary_list.html">리스트</a>
+                    </li>
+                    <li>
+                        <a href="./diary_detail.html">상세</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </body>
