--- a/pages.html
+++ b/pages.html
@@ -143,6 +143,9 @@
                     <li>
                         <a href="./diary_detail.html">상세</a>
                     </li>
+                    <li>
+                        <a href="./diary_write.html">작성</a>
+                    </li>
                 </ul>
             </div>
         </div>
