--- a/pages.html
+++ b/pages.html
@@ -149,6 +149,19 @@
                 </ul>
             </div>
         </div>
+        <div class="box">
+            <div class="content">
+                <h3>힐링음악</h3>
+                <ul>
+                    <li>
+                        <a href="./music_list.html">리스트</a>
+                    </li>
+                    <li>
+                        <a href="./music_detail.html">상세</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </body>
