15 edit: 수정사항 반영

--- a/consulting_detail.html
+++ b/consulting_detail.html
@@ -319,7 +319,11 @@
                     <div class="header">
                         <div class="subject">
                             <h1>#38 혼자만의 육아가 저의 마음을 외롭게 합니다.</h1>
-                            <div class="date">2020.07.01</div>
+                            <div class="info">
+                                <div class="date">2020.07.01</div>
+                                <div class="read">읽음 <b>231</b></div>
+                                <div class="comment">댓글 <b>231</b></div>
+                            </div>
                         </div>
                         <a class="button likes">
                             <i class="fas fa-heart"></i>
