--- a/music_detail.html
+++ b/music_detail.html
@@ -319,7 +319,11 @@
                     <div class="header">
                         <div class="subject">
                             <h1>#2 If you go – by 허진</h1>
-                            <div class="date">2020.07.01</div>
+                            <div class="info">
+                                <div class="date">2020.07.01</div>
+                                <div class="read">읽음 <b>231</b></div>
+                                <div class="comment">댓글 <b>231</b></div>
+                            </div>
                         </div>
                         <a class="button likes">
                             <i class="fas fa-heart"></i>
