--- a/salon_detail.html
+++ b/salon_detail.html
@@ -25,7 +25,7 @@
                 <a href="" class="is-hidden-mobile">
                     <img src="./img/logo.png" alt="마음사이">
                 </a>
-                <div class="mobile-current-title is-hidden-tablet">그림검사</div>
+                <div class="mobile-current-title is-hidden-tablet">마음쌀롱</div>
             </div>
             <nav class="menu is-hidden-mobile">
                 <ul class="main-menu">
