--- a/pages.html
+++ b/pages.html
@@ -162,6 +162,25 @@
                 </ul>
             </div>
         </div>
+        <div class="box">
+            <div class="content">
+                <h3>심리체크</h3>
+                <ul>
+                    <li>
+                        <a href="./psycheck_list.html">리스트</a>
+                    </li>
+                    <li>
+                        <a href="./psycheck_detail.html">상세</a>
+                    </li>
+                    <li>
+                        <a href="./psycheck_test.html">검사</a>
+                    </li>
+                    <li>
+                        <a href="./psycheck_complete.html">완료</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </body>
