17 add: 계정관련/기타 추가

--- a/pages.html
+++ b/pages.html
@@ -181,6 +181,71 @@
                 </ul>
             </div>
         </div>
+        <div class="box">
+            <div class="content">
+                <h3>계정</h3>
+                <ul>
+                    <li>
+                        <a href="./account_login.html">로그인</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_agreement.html">약관동의</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_form.html">회원가입</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_find_id.html">아이디찾기</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_find_id_result.html">아이디찾기 결과</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_find_pw.html">비밀번호찾기</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_find_pw_result.html">비밀번호찾기 결과</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_edit_input_pw.html">회원정보수정 - 비번 입력</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_edit_list.html">회원정보수정</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_edit_pw.html">비밀번호 수정</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_edit_pw_result.html">비밀번호 수정 완료</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_edit_email.html">이메일 수정</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_edit_birth.html">출생년도/성별 수정</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_withdraw.html">탈퇴신청</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="box">
+            <div class="content">
+                <h3>기타</h3>
+                <ul>
+                    <li>
+                        <a href="./etc_rule.html">이용규칙</a>
+                    </li>
+                    <li>
+                        <a href="./etc_terms.html">이용약관</a>
+                    </li>
+                    <li>
+                        <a href="./etc_privacy.html">개인정보처리방침</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </body>
