--- a/pages.html
+++ b/pages.html
@@ -246,6 +246,25 @@
                 </ul>
             </div>
         </div>
+        <div class="box">
+            <div class="content">
+                <h3>게시판</h3>
+                <ul>
+                    <li>
+                        <a href="./board_contact.html">문의하기</a>
+                    </li>
+                    <li>
+                        <a href="./board_partnership.html">광고제휴</a>
+                    </li>
+                    <li>
+                        <a href="./board_notice_list.html">공지사항 리스트</a>
+                    </li>
+                    <li>
+                        <a href="./board_notice_detail.html">공지사항 상세</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </body>
