--- a/board_contact.html
+++ b/board_contact.html
@@ -25,7 +25,7 @@
                 <a href="" class="is-hidden-mobile">
                     <img src="./img/logo.png" alt="마음사이">
                 </a>
-                <div class="mobile-current-title is-hidden-tablet">탈퇴신청</div>
+                <div class="mobile-current-title is-hidden-tablet">문의하기</div>
             </div>
             <nav class="menu is-hidden-mobile">
                 <ul class="main-menu">
@@ -294,60 +294,33 @@
 
     <main class="sub">
 
-        <!-- 탈퇴신청 -->
-        <section class="account">
+        <!-- 문의하기 -->
+        <section class="board">
             <div class="container">
                 <div class="page-title">
-                    <h1 class="font-serif">탈퇴사유를 알려주세요.</h1>
+                    <h1 class="font-serif">문의하실 내용을 작성해주세요.</h1>
                 </div>
 
-                <div class="field-withdraw">
+                <div class="field-board">
 
                     <div class="field">
+                        <label class="label">제목</label>
                         <div class="control">
-                            <label class="radio">
-                                <input type="radio" name="answer">
-                                서비스 미사용
-                            </label>
+                            <input class="input" type="text" placeholder="문의제목">
                         </div>
+                    </div>
+                    <div class="field">
+                        <label class="label">내용</label>
                         <div class="control">
-                            <label class="radio">
-                                <input type="radio" name="answer">
-                                사용빈도가 낮아서
-                            </label>
-                        </div>
-                        <div class="control">
-                            <label class="radio">
-                                <input type="radio" name="answer">
-                                원하는 컨텐츠가 없어서
-                            </label>
-                        </div>
-                        <div class="control">
-                            <label class="radio">
-                                <input type="radio" name="answer">
-                                서비스 이용불편
-                            </label>
-                        </div>
-                        <div class="control">
-                            <label class="radio">
-                                <input type="radio" name="answer">
-                                기타
-                            </label>
-                            <textarea class="textarea" placeholder="직접입력"></textarea>
+                            <textarea class="textarea" placeholder="문의내용"></textarea>
                             <div class="limit">
-                                <span class="current">0</span>/<span class="target">300</span>
+                                <span class="current">0</span>/<span class="target">500</span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="message is-danger">
-                        <div class="message-body">
-                            <p>탈퇴시 기존 아이디로는 재가입이 되지 않습니다. 작성하신 게시물은 탈퇴 후에도 삭제되지 않으오니 삭제를 원하시는 경우에는 반드시 게시물을 먼저 삭제하신 후 탈퇴신청하여 주세요.</p>
-                        </div>
-                    </div>
-
                     <div class="buttons is-centered">
-                        <a href="" class="button is-danger button-withdraw">탈퇴신청</a>
+                        <a href="" class="button is-link button-contact">문의접수</a>
                     </div>
 
                 </div>
@@ -445,12 +418,13 @@
         <div class="go-top"></div>
     </footer>
 
-    <!-- modal: 탈퇴신청 -->
-    <div class="modal modal-withdraw is-small">
+    <!-- modal: 문의완료 -->
+    <div class="modal modal-contact is-small">
         <div class="modal-background"></div>
         <div class="modal-content">
             <div class="box">
-                <p>탈퇴신청이 완료되었습니다.</p>
+                <p>문의가 접수되었습니다.</p>
+                <p>답변은 메일로 드리며, 최대한 빠르게 확인 후 답변드리겠습니다.</p>
                 <div class="buttons is-centered">
                     <a href="" class="button button-modal-close is-dark">확인</a>
                 </div>
@@ -462,14 +436,14 @@
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/swiper.min.js"></script>
     <script src="./js/scripts.js"></script>
-        <script>
-            $(function () {
-                $(".button-withdraw").click(function (e) {
-                    e.preventDefault();
-                    $(".modal-withdraw").addClass("is-active");
-                })
+    <script>
+        $(function () {
+            $(".button-contact").click(function (e) {
+                e.preventDefault();
+                $(".modal-contact").addClass("is-active");
             })
-        </script>
+        })
+    </script>
 
 </body>
 
