19 add: 회원정보>심리체크내역 추가

--- a/pages.html
+++ b/pages.html
@@ -227,6 +227,12 @@
                     <li>
                         <a href="./account_register_withdraw.html">탈퇴신청</a>
                     </li>
+                    <li>
+                        <a href="./account_register_test_list.html">심리체크 리스트</a>
+                    </li>
+                    <li>
+                        <a href="./account_register_test_detail.html">심리체크 상세</a>
+                    </li>
                 </ul>
             </div>
         </div>
