20 edit: 회원가입완료 누락

--- a/pages.html
+++ b/pages.html
@@ -195,6 +195,9 @@
                         <a href="./account_register_form.html">회원가입</a>
                     </li>
                     <li>
+                        <a href="./account_register_complete.html">회원가입 완료</a>
+                    </li>
+                    <li>
                         <a href="./account_register_find_id.html">아이디찾기</a>
                     </li>
                     <li>
