21 edit: 심리체크 목록 상단누락, 로그인 체크박스 텍스트 변경

--- a/psycheck_list.html
+++ b/psycheck_list.html
@@ -316,6 +316,13 @@
                 </div>
 
                 <div class="top-bar">
+                    <div class="description">
+                        <p>체계적으로 구성된 심리체크</p>
+                        <p>임상 심리학자가 참여한 코칭코멘트가 함께 제공됩니다.</p>
+                    </div>
+                </div>
+
+                <div class="top-bar">
                     <ul class="psy-check-list">
                         <li class="is-active"><a href="">전체</a></li>
                         <li><a href="">스트레스</a></li>
