--- a/account_login.html
+++ b/account_login.html
@@ -319,7 +319,7 @@
                         <div class="control">
                             <label class="checkbox">
                                 <input type="checkbox">
-                                로그인 상태 유지
+                                아이디 저장
                             </label>
                         </div>
                     </div>
