24 add: 추가페이지

--- a/pages.html
+++ b/pages.html
@@ -183,6 +183,32 @@
         </div>
         <div class="box">
             <div class="content">
+                <h3>심리전문가 교육영상</h3>
+                <ul>
+                    <li>
+                        <a href="./edu_list.html">리스트</a>
+                    </li>
+                    <li>
+                        <a href="./edu_detail.html">상세</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="box">
+            <div class="content">
+                <h3>기술통계</h3>
+                <ul>
+                    <li>
+                        <a href="./statistic_list.html">리스트</a>
+                    </li>
+                    <li>
+                        <a href="./statistic_detail.html">상세</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="box">
+            <div class="content">
                 <h3>계정</h3>
                 <ul>
                     <li>
