--- a/index.html
+++ b/index.html
@@ -674,6 +674,32 @@
             </div>
         </section>
 
+        <!-- 추가 컨텐츠 -->
+        <section class="etc-content">
+            <div class="container">
+                <ul class="content-list">
+                    <li>
+                        <a href="">
+                            <img src="./img/icon_etc_1.png" alt="심리전문가 교육영상">
+                            <div class="content-title">
+                                <h3>심리전문가 교육영상</h3>
+                                <p>국내 유명 전문가의 노하우를 영상으로 만나보세요.</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./img/icon_etc_2.png" alt="학습심리검사 기술통계">
+                            <div class="content-title">
+                                <h3>학습심리검사 기술통계</h3>
+                                <p>대표심리검사의 누적된 통계자료를 확인해보세요.</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
         <!-- 위캐닝 심리검사 for mobile -->
         <section class="wecaning-test is-hidden-desktop">
             <div class="container">
@@ -821,13 +847,12 @@
                     clickable: true,
                 },
                 on: {
-                    init: function() {
+                    init: function () {
                         this.slideNext();
                     }
                 }
             });
         }
-       
     </script>
 </body>
 
