--- a/index.html
+++ b/index.html
@@ -236,6 +236,20 @@
                         </a>
                     </li>
                 </ul>
+                <ul class="statistic">
+                    <li>
+                        <a href="">
+                            <img src="./img/icon_etc_1.png">
+                            <span>심리전문가 교육영상</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./img/icon_etc_2.png">
+                            <span>학습심리검사 기술통계</span>
+                        </a>
+                    </li>
+                </ul>
                 <ul class="sub-check">
                     <li>
                         <a href="">
