--- a/add_wecaning_mission.html
+++ b/add_wecaning_mission.html
@@ -294,42 +294,87 @@
 
 	<main class="sub">
 
-		<!-- 자녀 정보 등록 -->
-		<section class="account">
+		<section class="wecaning-start">
 			<div class="container">
 				<div class="page-title">
-					<h1 class="font-serif">위캐닝 스타트 미션을 시작합니다.</h1>
-          <p class="is-size-6 mt-3">매주 수행할 미션이 제공됩니다.</p>
-        </div>
-
-				<div class="field-register">
-					<div class="notification is-light">
-            <ol class="ml-4">
-              <li>미션은 12주 동안 무료로 진행됩니다.</li>
-              <li>주어진 미션(2~15개)을 7일 동안 진행하고 기록하여 주세요.</li>
-              <li>기간 내에 미션을 모두 완료하시길 권장하며 제출되지 않더라도 기간이 경과되면 다음 주 미션으로 자동으로 넘어갑니다.</li>
-              <li>미션은 시작 후에는 취소가 되지 않으며, 진행기간 동안 중단되지 않으니 시작하기 전 일정을 확인 후 진행하여 주세요.</li>
-            </ol>
-					</div>
-
-					<div class="field mt-6">
-            <label class="label">미션을 진행할 자녀를 선택하세요.</label>
-            <div class="select is-fullwidth">
-              <select>
-                <option>자녀를 선택하세요</option>
-                <option value="1">김위캔</option>
-                <option value="2">김위캔</option>
-              </select>
-            </div>
-            <p class="help mt-3">자녀정보는 마이페이지에서 등록 가능합니다.</p>
-          </div>
-
-          <div class="notification is-link is-light mt-6">
-            <p class="has-text-centered">선택된 자녀의 위캐닝 스타트 미션을<br>진행하시겠습니까?</p>
-            <a href="" class="button is-link mt-4 is-fullwidth">확인</a>
-          </div>
-
+					<h1><img src="./img/icon_title_13.png"><b>1주차</b>스타트미션</h1>
+					<p>미션을 확인하신 후 자녀와 함께 수행해보세요.</p>
 				</div>
+
+				<div class="due-date">
+					<p><i class="fas fa-clock"></i> 유효기간 <b>2021.06.09 23:59</b> 까지</p>
+				</div>
+
+				<div class="notification is-light">
+					<ol class="ml-4">
+						<li>주어진 미션(2~15개)을 7일 동안 진행하고 기록하여 주세요.</li>
+						<li>미션을 완벽히 달성했을 경우를 100%(별5개)를 기준으로 달성율을 선택하여 주세요.</li>
+						<li>내용기록은 미션 수행내용 및 수행하면서 어려웠던 점이나 특이사항 등을 기록하는 부분입니다.</li>
+						<li>완료하기는 유효기간 만료일 당일에만 가능하며 기간 내에 먼저 종료하실 수 없습니다.</li>
+						<li>기간 내에 미션을 모두 완료하시길 권장하며 미션은 유효기간(시간) 경과시 자동으로 완료되며 다음 주차의 미션이 자동으로 시작됩니다.</li>
+					</ol>
+				</div>
+
+				<!-- mission 1 -->
+				<div class="mission">
+					<div class="mission-title">
+						<span class="icon">
+							<img src="./img/icon_title_1.png">
+							<span>CHECK!</span>
+						</span>
+						<p>
+							자녀와 함께 공부에 대한 이야기를 주 3회 30분간 나누어 보세요. 경청과 격려를 잊지 마세요.
+						</p>
+					</div>
+					<div class="field">
+						<textarea class="textarea" placeholder="예시&#13;&#10;1/22 공부를 하고 싶은 이유에 대해 이야기함&#13;&#10;1/23 어떤 공부가 제일 재밌는지 이야기 나눔"></textarea>
+					</div>
+					<div class="rating">
+						<div class="question">미션을 얼마나 달성하셨나요?</div>
+						<div class="starrr"></div>
+						<p class="help"></p>
+					</div>
+				</div>
+
+				<!-- mission 2 -->
+				<div class="mission">
+					<div class="mission-title">
+						<span class="icon">
+							<img src="./img/icon_title_1.png">
+							<span>CHECK!</span>
+						</span>
+						<p>
+							자녀와 함께 공부에 대한 이야기를 주 3회 30분간 나누어 보세요. 경청과 격려를 잊지 마세요.
+						</p>
+					</div>
+					<div class="field">
+						<textarea class="textarea" placeholder="예시&#13;&#10;1/22 공부를 하고 싶은 이유에 대해 이야기함&#13;&#10;1/23 어떤 공부가 제일 재밌는지 이야기 나눔"></textarea>
+					</div>
+					<div class="rating">
+						<div class="question">미션을 얼마나 달성하셨나요?</div>
+						<div class="starrr"></div>
+						<p class="help"></p>
+					</div>
+				</div>
+
+				<!-- message -->
+				<div class="message is-link">
+					<div class="message-body">
+						<p>미션 내용이 저장되었습니다.</p>
+						<p>미션이 제출되었습니다.</p>
+					</div>
+				</div>
+				<div class="message is-danger">
+					<div class="message-body">
+						<p>제출 가능한 기간이 아닙니다.</p>
+					</div>
+				</div>
+
+				<div class="buttons is-centered">
+					<a href="" class="button">저장하기</a>
+					<a href="" class="button is-link">완료하기</a>
+				</div>
+
 			</div>
 		</section>
 
@@ -426,6 +471,7 @@
 
 	<script src="./js/jquery-3.4.1.min.js"></script>
 	<script src="./js/swiper.min.js"></script>
+	<script src="./js/starrr.js"></script>
 	<script src="./js/scripts.js"></script>
 
 </body>
