--- a/add_wecaning_status.html
+++ b/add_wecaning_status.html
@@ -298,36 +298,68 @@
 		<section class="account">
 			<div class="container">
 				<div class="page-title">
-					<h1 class="font-serif">위캐닝 스타트 미션을 시작합니다.</h1>
-          <p class="is-size-6 mt-3">매주 수행할 미션이 제공됩니다.</p>
-        </div>
+					<h1 class="font-serif">스타트미션 현황</h1>
+					<p class="is-size-6 mt-3">자녀의 미션 진행 현황입니다.</p>
+				</div>
 
 				<div class="field-register">
-					<div class="notification is-light">
-            <ol class="ml-4">
-              <li>미션은 12주 동안 무료로 진행됩니다.</li>
-              <li>주어진 미션(2~15개)을 7일 동안 진행하고 기록하여 주세요.</li>
-              <li>기간 내에 미션을 모두 완료하시길 권장하며 제출되지 않더라도 기간이 경과되면 다음 주 미션으로 자동으로 넘어갑니다.</li>
-              <li>미션은 시작 후에는 취소가 되지 않으며, 진행기간 동안 중단되지 않으니 시작하기 전 일정을 확인 후 진행하여 주세요.</li>
-            </ol>
-					</div>
 
 					<div class="field mt-6">
-            <label class="label">미션을 진행할 자녀를 선택하세요.</label>
-            <div class="select is-fullwidth">
-              <select>
-                <option>자녀를 선택하세요</option>
-                <option value="1">김위캔</option>
-                <option value="2">김위캔</option>
-              </select>
-            </div>
-            <p class="help mt-3">자녀정보는 마이페이지에서 등록 가능합니다.</p>
-          </div>
+						<label class="label">기간 선택</label>
+						<div class="select">
+							<select>
+								<option>기간을 선택하세요</option>
+								<option value="1">1개월</option>
+								<option value="2">3개월</option>
+								<option value="3">6개월</option>
+								<option value="4">12개월</option>
+								<option value="5">전체</option>
+							</select>
+						</div>
+					</div>
 
-          <div class="notification is-link is-light mt-6">
-            <p class="has-text-centered">선택된 자녀의 위캐닝 스타트 미션을<br>진행하시겠습니까?</p>
-            <a href="" class="button is-link mt-4 is-fullwidth">확인</a>
-          </div>
+					<div class="box">
+						<table class="table is-fullwidth">
+							<thead>
+								<tr>
+									<th>이름</th>
+									<th>미션시작/만료일</th>
+									<th>진행차수</th>
+									<th>결과</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>김봄</td>
+									<td>2020.01.01</td>
+									<td>6주차</td>
+									<td>
+										<a href="" class="button is-small is-primary">보기</a>
+									</td>
+								</tr>
+								<tr>
+									<td>김가을</td>
+									<td>2020.01.01<br>2020.02.02</td>
+									<td>6주차</td>
+									<td>
+										<a href="" class="button is-small is-primary">보기</a>
+									</td>
+								</tr>
+								<tr>
+									<td>김가을</td>
+									<td>2020.01.01<br>2020.02.02</td>
+									<td>6주차</td>
+									<td>
+										<a href="" class="button is-small is-primary">보기</a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+
+					<div class="buttons is-centered">
+						<a href="" class="button is-link">마이페이지로 이동</a>
+					</div>
 
 				</div>
 			</div>
