--- a/add_pages.html
+++ b/add_pages.html
@@ -16,6 +16,11 @@
       <a href="./add_salon_list.html" class="button is-link">마음쌀롱 리스트</a>
       <a href="./add_register_children.html" class="button is-link">스타트 자녀 정보</a>
       <a href="./add_wecaning_start.html" class="button is-link">스타트미션 시작</a>
+      <a href="./add_wecaning_mission.html" class="button is-link">스타트미션 페이지</a>
+      <a href="./add_wecaning_mission_complete.html" class="button is-link">스타트미션 완료</a>
+      <a href="./add_wecaning_mission_complete_total.html" class="button is-link">스타트미션 최종완료</a>
+      <a href="./add_wecaning_history.html" class="button is-link">스타트분석 내역</a>
+      <a href="./add_wecaning_status.html" class="button is-link">스타트미션 현황</a>
     </div>
 </body>
 
