--- a/add_wecaning_mission_complete.html
+++ b/add_wecaning_mission_complete.html
@@ -294,42 +294,32 @@
 
 	<main class="sub">
 
-		<!-- 자녀 정보 등록 -->
-		<section class="account">
+		<section class="wecaning-start">
 			<div class="container">
 				<div class="page-title">
-					<h1 class="font-serif">위캐닝 스타트 미션을 시작합니다.</h1>
-          <p class="is-size-6 mt-3">매주 수행할 미션이 제공됩니다.</p>
-        </div>
-
-				<div class="field-register">
-					<div class="notification is-light">
-            <ol class="ml-4">
-              <li>미션은 12주 동안 무료로 진행됩니다.</li>
-              <li>주어진 미션(2~15개)을 7일 동안 진행하고 기록하여 주세요.</li>
-              <li>기간 내에 미션을 모두 완료하시길 권장하며 제출되지 않더라도 기간이 경과되면 다음 주 미션으로 자동으로 넘어갑니다.</li>
-              <li>미션은 시작 후에는 취소가 되지 않으며, 진행기간 동안 중단되지 않으니 시작하기 전 일정을 확인 후 진행하여 주세요.</li>
-            </ol>
-					</div>
-
-					<div class="field mt-6">
-            <label class="label">미션을 진행할 자녀를 선택하세요.</label>
-            <div class="select is-fullwidth">
-              <select>
-                <option>자녀를 선택하세요</option>
-                <option value="1">김위캔</option>
-                <option value="2">김위캔</option>
-              </select>
-            </div>
-            <p class="help mt-3">자녀정보는 마이페이지에서 등록 가능합니다.</p>
-          </div>
-
-          <div class="notification is-link is-light mt-6">
-            <p class="has-text-centered">선택된 자녀의 위캐닝 스타트 미션을<br>진행하시겠습니까?</p>
-            <a href="" class="button is-link mt-4 is-fullwidth">확인</a>
-          </div>
-
+					<h1><img src="./img/icon_title_13.png"><b>1주차</b>미션 완료</h1>
 				</div>
+
+				<h2 class="doctor-talk"><b>노규식박사님</b>으로 부터 메시지</h2>
+				<div class="notification is-link is-light">
+					<p>안녕하세요</p>
+					<p>위캐닝 스타트를 이용해 주셔서 감사합니다.</p>
+				</div>
+
+				<div class="purchase">
+					<a href="">
+						<img src="./img/icon_goods.png">
+						<div class="text">
+							<sup>아동검사 3 in 1</sup>
+							<span><b>위캐닝스타트분석(WSA)</b> 구매 바로가기</span>
+						</div>
+					</a>
+				</div>
+
+				<div class="buttons is-centered">
+					<a href="" class="button is-link">다음 미션으로 이동</a>
+				</div>
+
 			</div>
 		</section>
 
@@ -426,6 +416,7 @@
 
 	<script src="./js/jquery-3.4.1.min.js"></script>
 	<script src="./js/swiper.min.js"></script>
+	<script src="./js/starrr.js"></script>
 	<script src="./js/scripts.js"></script>
 
 </body>
