--- a/add_wecaning_mission.html
+++ b/add_wecaning_mission.html
@@ -328,6 +328,10 @@
 					</div>
 					<div class="field">
 						<textarea class="textarea" placeholder="예시&#13;&#10;1/22 공부를 하고 싶은 이유에 대해 이야기함&#13;&#10;1/23 어떤 공부가 제일 재밌는지 이야기 나눔"></textarea>
+						<div class="text-limit">
+							<span class="current">0</span>
+							<span class="total"></span>
+						</div>
 					</div>
 					<div class="rating">
 						<div class="question">미션을 얼마나 달성하셨나요?</div>
@@ -349,6 +353,10 @@
 					</div>
 					<div class="field">
 						<textarea class="textarea" placeholder="예시&#13;&#10;1/22 공부를 하고 싶은 이유에 대해 이야기함&#13;&#10;1/23 어떤 공부가 제일 재밌는지 이야기 나눔"></textarea>
+						<div class="text-limit">
+							<span class="current">0</span>
+							<span class="total"></span>
+						</div>
 					</div>
 					<div class="rating">
 						<div class="question">미션을 얼마나 달성하셨나요?</div>
