--- a/add_wecaning_status.html
+++ b/add_wecaning_status.html
@@ -25,7 +25,7 @@
 				<a href="" class="is-hidden-mobile">
 					<img src="./img/logo.png" alt="마음사이">
 				</a>
-				<div class="mobile-current-title is-hidden-tablet">위캐닝 스타트</div>
+				<div class="mobile-current-title is-hidden-tablet">마이페이지</div>
 			</div>
 			<nav class="menu is-hidden-mobile">
 				<ul class="main-menu">
