--- a/add_pages.html
+++ b/add_pages.html
@@ -21,6 +21,7 @@
       <a href="./add_wecaning_mission_complete_total.html" class="button is-link">스타트미션 최종완료</a>
       <a href="./add_wecaning_history.html" class="button is-link">스타트분석 내역</a>
       <a href="./add_wecaning_status.html" class="button is-link">스타트미션 현황</a>
+      <a href="./add_start_index.html" class="button is-link">스타트메인</a>
     </div>
 </body>
 
