--- a/add_index.html
+++ b/add_index.html
@@ -122,6 +122,12 @@
                             </li>
                             <li>
                                 <a href="">
+                                    <img src="./img/icon_parents.png" alt="">
+                                    <span>슬기로운 부모생활</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
                                     <img src="./img/icon_title_2.png" alt="">
                                     <span>그림검사</span>
                                 </a>
@@ -281,6 +287,14 @@
                     <li>
                         <a href="">
                             <img src="./img/icon_etc_1.png">
+                            <span>노규식 박사의 슬기로운 부모생활</span>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="statistic">
+                    <li>
+                        <a href="">
+                            <img src="./img/icon_etc_1.png">
                             <span>유성경 교수의 부모교육 강연</span>
                         </a>
                     </li>
@@ -292,13 +306,13 @@
             <div class="bottom">
                 <ul>
                     <li>
-                        <a href="">이용약관</a>
+                        <a href="">이용약관/규칙</a>
                     </li>
                     <li>
                         <a href="">개인정보처리방침</a>
                     </li>
                     <li>
-                        <a href="">이용규칙</a>
+                        <a href="">FAQ</a>
                     </li>
                     <li>
                         <a href="">광고제휴문의</a>
@@ -505,6 +519,13 @@
             </div>
         </section>
 
+        <!-- 위캐닝 스마트 배너 -->
+        <section class="smart-banner">
+            <a href="">
+                <img src="./img/wecaning_start_banner.png">
+            </a>
+        </section>
+
         <!-- 마음설명서 -->
         <section class="maum-manual">
             <div class="container">
@@ -605,7 +626,7 @@
         <section class="fullwidth-banner">
             <div class="container">
                 <a href="">
-                    <img src="./img/bottom_banner.png" alt="">
+                    <img src="./img/wsa_banner.png" alt="">
                 </a>
             </div>
         </section>
