--- a/add_pages.html
+++ b/add_pages.html
@@ -22,6 +22,7 @@
       <a href="./add_wecaning_history.html" class="button is-link">스타트분석 내역</a>
       <a href="./add_wecaning_status.html" class="button is-link">스타트미션 현황</a>
       <a href="./add_start_index.html" class="button is-link">스타트메인</a>
+      <a href="./add_consulting_write.html" class="button is-link">고민상담 작성</a>
     </div>
 </body>
 
