--- a/add_start_index.html
+++ b/add_start_index.html
@@ -346,7 +346,9 @@
                     </div>
                 </div>
                 <div class="movie">
-                    <iframe width="560" height="349" src="https://www.youtube.com/embed/ZvFNddsnT2s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="349" src="https://www.youtube.com/embed/ZvFNddsnT2s" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -387,30 +389,6 @@
                             <span class="author"><b>relaxlux</b>님 작성</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
-                            <img src="./img/temp_image_5.jpg">
-                            <span class="author"><b>하쿠나마타타</b>님 작성</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="./img/temp_image_6.jpg">
-                            <span class="author"><b>초코송이</b>님 작성</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="./img/temp_image_7.jpg">
-                            <span class="author"><b>안드로메다</b>님 작성</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="./img/temp_image_8.jpg">
-                            <span class="author"><b>오디오맨</b>님 작성</span>
-                        </a>
-                    </li>
                 </ul>
 
                 <div class="buttons is-centered">
@@ -419,99 +397,27 @@
             </div>
         </section>
 
-        <!-- 부모교육강연 -->
-        <section class="maum-manual">
+        <!-- 노규식박사의 슬기로운 부모생활 -->
+        <section class="smart-parent-life">
             <div class="container">
                 <div class="main-title">
-                    <img src="./img/icon_title_3.png" alt="마음설명서">
+                    <img src="./img/icon_parents.png" alt="슬기로운 부모생활">
                     <h2>
-                        <sup>유성경 교수의</sup>
-                        <span>부모교육 강연</span>
+                        <sup>노규식 박사의</sup>
+                        <span>슬기로운 부모생활</span>
                     </h2>
                 </div>
-
-                <ul class="post-list is-3">
-                    <li>
-                        <a href="">
-                            <div class="photo">
-                                <img src="./img/temp_photo_2.jpg">
-                                <span class="running-time">10:00</span>
-                            </div>
-                            <dl>
-                                <dt>부모양육</dt>
-                                <dd>둘째 아이가 태어나면서 첫째 아이에게 상처만 주고 좋은 엄마가 돼 주지 못하는 것 같아 고민인 전업맘의 이야기입니다.</dd>
-                                <dd class="info">
-                                    <span class="date">2020.07.01</span>
-                                    <span class="read">읽음 <b>203</b></span>
-                                    <span class="comment">댓글 <b>203</b></span>
-                                    <span class="like"><i class="fas fa-heart"></i><b>44</b></span>
-                                </dd>
-                            </dl>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="photo">
-                                <img src="./img/temp_photo_2.jpg">
-                                <span class="running-time">10:00</span>
-                            </div>
-                            <dl>
-                                <dt>부모양육</dt>
-                                <dd>둘째 아이가 태어나면서 첫째 아이에게 상처만 주고 좋은 엄마가 돼 주지 못하는 것 같아 고민인 전업맘의 이야기입니다.</dd>
-                                <dd class="info">
-                                    <span class="date">2020.07.01</span>
-                                    <span class="read">읽음 <b>203</b></span>
-                                    <span class="comment">댓글 <b>203</b></span>
-                                    <span class="like"><i class="fas fa-heart"></i><b>44</b></span>
-                                </dd>
-                            </dl>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="photo">
-                                <img src="./img/temp_photo_2.jpg">
-                                <span class="running-time">10:00</span>
-                            </div>
-                            <dl>
-                                <dt>부모양육</dt>
-                                <dd>둘째 아이가 태어나면서 첫째 아이에게 상처만 주고 좋은 엄마가 돼 주지 못하는 것 같아 고민인 전업맘의 이야기입니다.</dd>
-                                <dd class="info">
-                                    <span class="date">2020.07.01</span>
-                                    <span class="read">읽음 <b>203</b></span>
-                                    <span class="comment">댓글 <b>203</b></span>
-                                    <span class="like"><i class="fas fa-heart"></i><b>44</b></span>
-                                </dd>
-                            </dl>
-                        </a>
-                    </li>
-                </ul>
-
-                <div class="buttons is-centered">
-                    <a href="" class="button is-medium">더 보기</a>
+                <div class="movie">
+                    <iframe width="560" height="349" src="https://www.youtube.com/embed/ZvFNddsnT2s" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
-            </div>
-        </section>
-
-        <!-- 가로 배너 -->
-        <section class="banner">
-            <div class="container">
-                <a href="">
-                    <img src="./img/wsa_banner.png" alt="">
-                </a>
             </div>
         </section>
 
         <!-- 마음나누기 -->
         <section class="share-heart">
             <div class="container">
-                <div class="main-title">
-                    <img src="./img/icon_title_4.png" alt="마음, 나누기">
-                    <h2>
-                        <span>마음, 나누기</span>
-                    </h2>
-                </div>
-
                 <ul class="content-list">
                     <li>
                         <a href="">
@@ -539,6 +445,24 @@
             </div>
         </section>
 
+
+        <!-- 부모교육 강연 배너 -->
+        <section class="banner">
+            <div class="container">
+                <a href="">
+                    <img src="./img/yoo_banner.png" alt="">
+                </a>
+            </div>
+        </section>
+        
+        <!-- WSA 배너 -->
+        <section class="banner">
+            <div class="container">
+                <a href="">
+                    <img src="./img/wsa_banner.png" alt="">
+                </a>
+            </div>
+        </section>
 
     </main>
 
