--- a/add_wecaning_mission.html
+++ b/add_wecaning_mission.html
@@ -318,16 +318,21 @@
 				<!-- mission 1 -->
 				<div class="mission">
 					<div class="mission-title">
-						<span class="icon">
+						<h3>
 							<img src="./img/icon_title_1.png">
-							<span>CHECK!</span>
-						</span>
-						<p>
-							자녀와 함께 공부에 대한 이야기를 주 3회 30분간 나누어 보세요. 경청과 격려를 잊지 마세요.
-						</p>
+							적극적 경청(기본)
+						</h3>
+						<p>자녀의 말에 적극적으로 호응하면서 경청하는 태도를 말합니다.</p>
+						<ol class="mission-info">
+							<li>자녀의 말을 귀담아 들어줄 기회를 찾거나 마련합니다.</li>
+							<li>대화시에는 자녀의 이야기에 “아, 음, 그랬구나, 저런“ 등 반응해 가면서 경청합니다.</li>
+							<li>중간 중간 자녀가 한 이야기의 핵심을 간략히 요약하면서 확인을 구합니다. (예. “그러니까 선생님이 갑자기 불러서 무슨일인가 놀랐는데 철수를 도와줄 수 있냐고 물어보신거네?”)
+							</li>
+						</ol>
 					</div>
 					<div class="field">
-						<textarea class="textarea" placeholder="예시&#13;&#10;1/22 공부를 하고 싶은 이유에 대해 이야기함&#13;&#10;1/23 어떤 공부가 제일 재밌는지 이야기 나눔"></textarea>
+						<textarea class="textarea"
+							placeholder="예시&#13;&#10;1/22 공부를 하고 싶은 이유에 대해 이야기함&#13;&#10;1/23 어떤 공부가 제일 재밌는지 이야기 나눔"></textarea>
 						<div class="text-limit">
 							<span class="current">0</span>
 							<span class="total"></span>
@@ -339,20 +344,25 @@
 						<p class="help"></p>
 					</div>
 				</div>
-
+				
 				<!-- mission 2 -->
 				<div class="mission">
 					<div class="mission-title">
-						<span class="icon">
+						<h3>
 							<img src="./img/icon_title_1.png">
-							<span>CHECK!</span>
-						</span>
-						<p>
-							자녀와 함께 공부에 대한 이야기를 주 3회 30분간 나누어 보세요. 경청과 격려를 잊지 마세요.
-						</p>
+							적극적 경청(기본)
+						</h3>
+						<p>자녀의 말에 적극적으로 호응하면서 경청하는 태도를 말합니다.</p>
+						<ol class="mission-info">
+							<li>자녀의 말을 귀담아 들어줄 기회를 찾거나 마련합니다.</li>
+							<li>대화시에는 자녀의 이야기에 “아, 음, 그랬구나, 저런“ 등 반응해 가면서 경청합니다.</li>
+							<li>중간 중간 자녀가 한 이야기의 핵심을 간략히 요약하면서 확인을 구합니다. (예. “그러니까 선생님이 갑자기 불러서 무슨일인가 놀랐는데 철수를 도와줄 수 있냐고 물어보신거네?”)
+							</li>
+						</ol>
 					</div>
 					<div class="field">
-						<textarea class="textarea" placeholder="예시&#13;&#10;1/22 공부를 하고 싶은 이유에 대해 이야기함&#13;&#10;1/23 어떤 공부가 제일 재밌는지 이야기 나눔"></textarea>
+						<textarea class="textarea"
+							placeholder="예시&#13;&#10;1/22 공부를 하고 싶은 이유에 대해 이야기함&#13;&#10;1/23 어떤 공부가 제일 재밌는지 이야기 나눔"></textarea>
 						<div class="text-limit">
 							<span class="current">0</span>
 							<span class="total"></span>
@@ -436,8 +446,7 @@
 									<a href="">마음사이 심리센터</a>
 								</li>
 								<li>
-									<a href="https://smartstore.naver.com/wecaning/products/4909564887"
-										target="_blank">W-TAP 검사</a>
+									<a href="https://smartstore.naver.com/wecaning/products/4909564887" target="_blank">W-TAP 검사</a>
 								</li>
 							</ul>
 						</div>
